--- a/src/app/pages/dte/group-trade-program/index/group-trade-program.component.html
+++ b/src/app/pages/dte/group-trade-program/index/group-trade-program.component.html
@@ -34,32 +34,32 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama" prop="name">
+        <ngx-datatable-column name="{{ ls.locale.global.label.name }}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span id="name" class="row-name" (click)="directDetail(row)">{{row.name}}</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Non-HMS" prop="type">
+        <ngx-datatable-column name="{{ ls.locale.dte.group_trade_program.text3 }}" prop="type">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <mat-icon>{{ row.type == 'HMS' ? 'check_box_outline_blank' : 'check_box' }}</mat-icon>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Nama Principal Non-HMS" prop="principal">
+        <ngx-datatable-column name="{{ ls.locale.dte.group_trade_program.text4 }}" prop="principal">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.principal}}
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Status" prop="name">
+        <ngx-datatable-column name="{{ ls.locale.global.label.status }}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p id="status" class="status text-truncate h6 p-4 status-order"
                 [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{ row.status && row.status === 'active' ? 'AKTIF' : 'TIDAK AKTIF' }}
+                {{ row.status && row.status === 'active' ? ls.locale.global.label.active : ls.locale.global.label.inactive }}
               </p>
             </div>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column [width]="80" name="Tindakan" headerClass="textright" [sortable]="false">
+        <ngx-datatable-column [width]="80" name="{{ ls.locale.global.label.action }}" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
               <button id="btn-edit" mat-icon-button color="" (click)="directEdit(row)">
