--- a/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Panel Mitra'">
+  <page-content-header [contentTitle]="ls.locale.delivery_management.panel_mitra.text1">
   </page-content-header>
 
   <div class="content p-24">
@@ -14,7 +14,7 @@
               </mat-select>
               <mat-error class="mt-8 px-24"
                 *ngIf="formPanelMitra.controls['courier'].hasError('required') && formPanelMitra.controls['courier'].touched">
-                Jenis Kurir harus diisi.
+                Jenis Kurir {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
@@ -24,18 +24,18 @@
               </mat-select>
               <mat-error class="mt-8 px-24"
                 *ngIf="formPanelMitra.controls['service'].hasError('required') && formPanelMitra.controls['service'].touched">
-                Jenis Layanan harus diisi.
+                {{ ls.locale.delivery_management.panel_mitra.text2 }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
             <div fxLayout="row" fxFlex="20" style="height: 35px;">
               <button mat-raised-button type="button" class="confirmation-button" fxFlex="100"
                 (click)="aturPanelMitra()">
-                ATUR PANEL MITRA
+                {{ ls.locale.produk_prinsipal.text18 }}
               </button>
             </div>
           </div>
           <div fxLayout="column" fxLayoutAlign="flex-end flex-end" fxFlex="10">
-            <small>Mitra Terpilih</small>
+            <small>{{ ls.locale.produk_prinsipal.text19 }}</small>
             <h1 style="margin-top: -4px;font-size: 30px;">
               {{ (allRowsSelected ? pagination.total :  selected.length) | rupiahFormaterWithoutRp }}</h1>
           </div>
@@ -44,29 +44,29 @@
           style="background-color: #585858;" fxLayoutAlign="end center" class="p-16 export" *ngIf="loaded">
           <a #downloadLink></a>
           <button mat-raised-button type="button" class="is-danger" (click)="import()">
-            <mat-icon>arrow_downward</mat-icon> Import XLSX
+            <mat-icon>arrow_downward</mat-icon> {{ ls.locale.global.button.import }} XLSX
           </button>
           <button (click)="export()" mat-raised-button type="button" class="is-danger">
-            <mat-icon>arrow_upward</mat-icon> Export XLSX
+            <mat-icon>arrow_upward</mat-icon> {{ ls.locale.global.button.export }} XLSX
           </button>
         </div>
         <form [formGroup]="formFilter" autoComplete="off" *ngIf="loaded">
           <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px"
             fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="National" formControlName="national">
+              <mat-select placeholder="{{ ls.locale.global.area.national }}" formControlName="national">
                 <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Zone" formControlName="zone" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.zone }}" formControlName="zone" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Zona' :
                   item.code}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Regional" formControlName="region" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.regional }}" formControlName="region" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Regional'
                   :
@@ -74,7 +74,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.area }}" formControlName="area" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Area'
                   :
@@ -82,7 +82,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.salespoint }}" formControlName="salespoint" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
                   'Semua
                   Salespoint'
@@ -91,7 +91,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="District" formControlName="district" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.district }}" formControlName="district" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   District'
                   :
@@ -99,7 +99,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.territory }}" formControlName="territory" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Territori'
                   :
@@ -113,7 +113,7 @@
           <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
             <mat-icon>search</mat-icon>
             <mat-form-field class="is-light tab-search">
-              <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+              <input matInput placeholder="{{ ls.locale.global.label.search }}" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
             </mat-form-field>
           </div>
         </div>
@@ -152,13 +152,13 @@
               </ng-template> -->
             </ngx-datatable-column>
 
-            <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
-            <ngx-datatable-column name="No. Ponsel" prop="phone" [sortable]="false">
+            <ngx-datatable-column name="{{ ls.locale.global.label.name }}" prop="name"></ngx-datatable-column>
+            <ngx-datatable-column name="{{ ls.locale.global.label.phone_number }}" prop="phone" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 {{row.phone ? row.phone : '-'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Tipe" prop="classification" [sortable]="false">
+            <ngx-datatable-column name="{{ ls.locale.call_objective.text9 }}" prop="classification" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 {{row.classification ? row.classification : '-'}}
               </ng-template>
@@ -173,7 +173,7 @@
                 {{row.region ? row.region : '-'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Area" prop="area" [sortable]="false">
+            <ngx-datatable-column name="{{ ls.locale.global.area.area }}" prop="area" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 {{row.area ? row.area : '-'}}
               </ng-template>
@@ -182,7 +182,7 @@
         </div>
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center" *ngIf="loaded">
           <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
-            SIMPAN
+            {{ ls.locale.global.button.save }}
           </button>
         </div>
       </form>
