--- a/src/app/pages/dte/audience/index/audience-index.component.html
+++ b/src/app/pages/dte/audience/index/audience-index.component.html
@@ -42,7 +42,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Grup" prop="name">
+        <ngx-datatable-column name="{{ ls.locale.principal_partnership.text3 }}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span id="nama-group" class="row-name" (click)="directDetail(row)">{{row.name}}</span>
           </ng-template>
@@ -54,13 +54,13 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Trade Program" [sortable]="false" prop="trade_creator_name">
+        <ngx-datatable-column name="{{ ls.locale.dte.trade_program.text3 }}" [sortable]="false" prop="trade_creator_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name">{{row.trade_creator_name ? row.trade_creator_name : '-'}}</span>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Jumlah Pengguna" [sortable]="false" prop="total_audiences"></ngx-datatable-column>
+        <ngx-datatable-column name="{{ ls.locale.dte.audience.text2 }}" [sortable]="false" prop="total_audiences"></ngx-datatable-column>
 
         <ngx-datatable-column [width]="90" name="Tanggal Dibuat" prop="created_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -68,7 +68,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Status Persetujuan Audience" prop="status">
+        <ngx-datatable-column name="{{ ls.locale.dte.audience.text3 }}" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span id="status" *ngIf="row.status === 'rejected'" class="text-boxed mat-red-700-bg">{{row.real_status}}</span>
             <span id="status" *ngIf="row.status === 'pending'" class="text-boxed mat-yellow-700-bg">{{row.real_status}}</span>
@@ -76,7 +76,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+        <ngx-datatable-column [width]="98" name="{{ ls.locale.global.label.action }}" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
