--- a/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
@@ -19,13 +19,13 @@
         <form autocomplete="off">
           <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <input matInput type="text" placeholder="Group Trade Program"
+              <input matInput type="text" placeholder="{{ ls.locale.dte.group_trade_program.text1 }}"
                 [value]="dataApproval['group_trade_program_name'] || ''" name="group_trade_program_name" disabled>
             </mat-form-field>
           </div>
           <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <input matInput type="text" placeholder="Trade Program" [value]="dataApproval['trade_program_name'] || ''"
+              <input matInput type="text" placeholder="{{ ls.locale.dte.trade_program.text1 }}" [value]="dataApproval['trade_program_name'] || ''"
                 name="trade_program_name" disabled>
             </mat-form-field>
           </div>
@@ -49,23 +49,23 @@
             </mat-form-field>
             <div fxFlex="1"></div>
             <mat-form-field fxFlex="20" class="is-light form-primary">
-              <input matInput type="text" placeholder="Requestor" [value]="dataApproval['requestor'] || ''"
+              <input matInput type="text" placeholder="{{ ls.locale.dte.approval_coin_adjustment.text2 }}" [value]="dataApproval['requestor'] || ''"
                 name="requestor" disabled>
             </mat-form-field>
             <div fxFlex="1"></div>
             <mat-form-field fxFlex="40" class="is-light form-primary">
-              <input matInput type="text" placeholder="Reason" [value]="dataApproval['reason'] || ''" name="reason"
+              <input matInput type="text" placeholder="{{ ls.locale.paylater_management.pengajuan_deaktivasi.text10 }}" [value]="dataApproval['reason'] || ''" name="reason"
                 disabled>
             </mat-form-field>
           </div>
           <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="20" class="is-light form-primary">
-              <input matInput type="text" placeholder="Tanggal Approval" [value]="dataApproval['responded_at'] || ''"
+              <input matInput type="text" placeholder="{{ ls.locale.dte.approval_coin_adjustment.text7 }}" [value]="dataApproval['responded_at'] || ''"
                 name="responded_at" disabled>
             </mat-form-field>
             <div fxFlex="1"></div>
             <mat-form-field fxFlex="20" class="is-light form-primary">
-              <input matInput type="text" placeholder="Approver" [value]="dataApproval['approver'] || ''"
+              <input matInput type="text" placeholder="{{ ls.locale.dte.approval_coin_adjustment.text3 }}" [value]="dataApproval['approver'] || ''"
                 name="approver" disabled>
             </mat-form-field>
           </div>
@@ -78,7 +78,7 @@
             <div class="search-field" fxLayout="row" fxLayoutAlign="center center" style="margin-right: 15px;">
               <mat-icon>search</mat-icon>
               <mat-form-field class="is-light tab-search">
-                <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+                <input matInput placeholder="{{ ls.locale.global.label.search }}" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
               </mat-form-field>
             </div>
           </div>
@@ -86,12 +86,12 @@
           <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="p-16"
             fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="National" formControlName="national">
+              <mat-select placeholder="{{ ls.locale.global.area.national }}" formControlName="national">
                 <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="Zone" formControlName="zone" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.zone }}" formControlName="zone" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all'
                   ? 'Semua
                   Zona' :
@@ -99,7 +99,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="Regional" formControlName="region" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.regional }}" formControlName="region" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name ===
                   'all' ? 'Semua
                   Regional'
@@ -108,7 +108,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.area }}" formControlName="area" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all'
                   ? 'Semua
                   Area'
@@ -117,7 +117,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.salespoint }}" formControlName="salespoint" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name ===
                   'all' ?
                   'Semua
@@ -136,7 +136,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="10%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory" multiple>
+              <mat-select placeholder="{{ ls.locale.global.area.territory }}" formControlName="territory" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name ===
                   'all' ? 'Semua
                   Territori'
@@ -148,11 +148,11 @@
             <div class="confirm p-10" fxLayout="row" fxLayoutGap="20px">
               <button mat-raised-button type="button" class="publish-button" (click)="resetFormFilter()"
                 style="width: 170px" style="height: 50px">
-                Reset
+                {{ ls.locale.dte.template_tugas.text23 }}
               </button>
               <button mat-raised-button type="button" class="confirmation-button" (click)="loadFormFilter()"
                 style="width: 170px" style="height: 50px">
-                Load Data
+                {{ ls.locale.dte.template_tugas.text24 }}
               </button>
             </div>
           </div>
@@ -166,10 +166,10 @@
             [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
             (page)="setPage($event)" (sort)="onSort($event)">
             <ngx-datatable-column name="Retailer Id" prop="id" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{ ls.locale.retailer.list.text7 }}" prop="code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Nama Retailer" prop="name"></ngx-datatable-column>
-            <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{ ls.locale.global.area.area }}" prop="area_code" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="{{ ls.locale.global.area.regional }}" prop="region_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Division" prop="division_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Jumlah Total Coin" prop="jml_total_coin" [sortable]="false">
             </ngx-datatable-column>
