--- a/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
@@ -61,4 +61,75 @@
       </mat-list>
     </div>
   </div>
+
+  <div>
+    <form [formGroup]="formFilter" autoComplete="off">
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="30%" class="is-light form-primary">
+          <mat-select placeholder="National" formControlName="national">
+            <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxFlex="30%" class="is-light form-primary">
+          <mat-select placeholder="Zone" formControlName="zone" multiple>
+            <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              Zona' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxFlex="30%" class="is-light form-primary">
+          <mat-select placeholder="Regional" formControlName="region" multiple>
+            <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              Regional' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </form>
+
+    <div class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+      <!-- <ngx-datatable [externalSorting]="true" (sort)="onSort($event)" -->
+      <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [offset]="offsetPagination" [columnMode]="'force'" 
+        [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [selected]="selected"
+        [selectAllRowsOnPage]="false" [selectionType]="'checkbox'" (select)="onSelect($event)"
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" (page)="setPage($event)">
+
+        <ngx-datatable-column [width]="100" [canAutoResize]="false" [sortable]="false">
+          <ng-template ngx-datatable-header-template>
+            <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected);"></mat-checkbox>
+          </ng-template>
+
+          <ng-template ngx-datatable-cell-template let-value="value" let-row="row" let-isSelected="isSelected"
+            let-onCheckboxChangeFn="onCheckboxChangeFn">
+            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)" [disabled]="allRowsSelected"
+              *ngIf="!allRowsSelected"></mat-checkbox>
+            <mat-checkbox [checked]="true" [disabled]="allRowsSelected" *ngIf="allRowsSelected"
+              class="mat-checkbox-all"></mat-checkbox>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Zona" prop="zone" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.zone ? row.zone : '-'}}
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Regional" prop="region" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.regional ? row.regional : '-'}}
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Area" prop="area" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.area ? row.area : '-'}}
+          </ng-template>
+        </ngx-datatable-column>
+      </ngx-datatable>
+    </div>
+    <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center">
+      <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+        SIMPAN
+      </button>
+    </div>
+  </div>
+
 </div>
