multilanguages change kh to km

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -117,7 +117,7 @@
               <mat-option value="id">
                 <div>Bahasa Indonesia</div>
               </mat-option>
-              <mat-option value="kh">
+              <mat-option value="km">
                 <div>Khmer</div>
               </mat-option>
           </mat-select>
